--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,9 +14,16 @@
     "no-shadow": "off",
     "no-param-reassign": "off",
     "eol-last": "off",
+    "no-dupe-keys": "off",
     "import/extensions": [ 1, {
       "js": "always", "json": "always"
-    }]
+    }],
+    "max-classes-per-file": 0,
+    "no-use-before-define": "off",
+    "radix": "off",
+    "no-undef": "off",
+    "no-plusplus": "off",
+    "no-unused-vars": "off"
   },
   "ignorePatterns": [
     "dist/",
